RESOLVED FIXED278523
Handle word-spacing for leading white space on SVG text
https://bugs.webkit.org/show_bug.cgi?id=278523
Summary Handle word-spacing for leading white space on SVG text
Ahmad Saleem
Reported 2024-08-22 08:50:57 PDT
Hi Team, While going through Chrome's bug tracker to find failing test cases in SVG Text, I also came across following: Test Case: https://codepen.io/AJizzzleBizzle/pen/zMrrvR?editors=1101 ^ Compare with Firefox Nightly 131 and Chrome Canary 130 (both match each other), while Safari 18 Beta is outlier here. Blink Commit: https://chromium.googlesource.com/chromium/src.git/+/56aec4bdbfb7f81b00009aa702be81ace6a20665 WebKit Source: https://github.com/WebKit/WebKit/blob/b07168f663600ed8831b938973f80a80a0b5ca81/Source/WebCore/rendering/svg/SVGTextLayoutEngineSpacing.cpp#L56 ^ Although merging it leads to crashes, we have a bug to fix before hand. Just raising so we can at least track this potential win.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-29 08:51:33 PDT
Ahmad Saleem
Comment 2 2025-06-04 02:27:16 PDT
EWS
Comment 3 2025-08-22 11:18:57 PDT
Committed 299066@main (81b3e77c1b84): <https://commits.webkit.org/299066@main> Reviewed commits have been landed. Closing PR #46311 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.