Handle word-spacing for leading white space on SVG text https://bugs.webkit.org/show_bug.cgi?id=278523 rdar://problem/134941299

Reviewed by NOBODY (OOPS!).

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src.git/+/56aec4bdbfb7f81b00009aa702be81ace6a20665

SVGTextLayoutEngineSpacing checking if the current and last characters
were non-nulls before attempting to apply word-spacing. This would mean
that we would never add word-spacing at the beginning of a text box.
Remove the checks for non-nuls and in order to avoid null deference leading
to crashes, we will also add 'nullFallback' for 'lastCharacter'.

* Source/WebCore/rendering/svg/SVGTextLayoutEngineSpacing.cpp:
(WebCore::SVGTextLayoutEngineSpacing::calculateCSSSpacing):
* LayoutTests/svg/text/word-spacing-leading-ws.html:
* LayoutTests/svg/text/word-spacing-leading-ws-expected.html: